# opengl-draw-renderer

./: CMakeLists.txt  README.md  premake5.lua  settings.txt
src/: main.c
src/base/: base.h  base_defs.h  base_math.c  base_math.h  base_str.c  base_str.h
src/draw/: draw.c  draw.h
src/gfx/: gfx.h
src/gfx/opengl/: opengl.h  opengl_funcs.h  opengl_helpers.c  opengl_linux.c  opengl_win32.c
